@@ -146,8 +146,113 @@
                             <requiredVersion>22.3</requiredVersion>
                             <buildArgs>
                                 <arg>-H:+AddAllCharsets</arg>
-                                <arg>--enable-preview</arg>
                                 <arg>--install-exit-handlers</arg>
+                                <arg>-march=compatibility</arg>
+                                <arg>-H:+AddAllCharsets</arg>
+                            </buildArgs>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>add-reachability-metadata</id>
+                                <goals>
+                                    <goal>add-reachability-metadata</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>pgo-instrument</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native-maven-plugin.version}</version>
+                        <configuration>
+                            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                            <metadataRepository>
+                                <enabled>true</enabled>
+                            </metadataRepository>
+                            <requiredVersion>22.3</requiredVersion>
+                            <buildArgs>
+                                <arg>--pgo-instrument</arg>
+                                <arg>-H:+AddAllCharsets</arg>
+                                <arg>--install-exit-handlers</arg>
+                                <arg>-march=compatibility</arg>
+                                <arg>-H:+AddAllCharsets</arg>
+                            </buildArgs>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>add-reachability-metadata</id>
+                                <goals>
+                                    <goal>add-reachability-metadata</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>pgo</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native-maven-plugin.version}</version>
+                        <configuration>
+                            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                            <metadataRepository>
+                                <enabled>true</enabled>
+                            </metadataRepository>
+                            <requiredVersion>22.3</requiredVersion>
+                            <buildArgs>
+                                <arg>--gc=G1</arg>
+                                <arg>--pgo=zookeeper.iprof</arg>
+                                <arg>-H:+AddAllCharsets</arg>
+                                <arg>--install-exit-handlers</arg>
+                                <arg>-march=compatibility</arg>
+                                <arg>-H:+AddAllCharsets</arg>
+                            </buildArgs>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>add-reachability-metadata</id>
+                                <goals>
+                                    <goal>add-reachability-metadata</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>g1-pgo</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native-maven-plugin.version}</version>
+                        <configuration>
+                            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                            <metadataRepository>
+                                <enabled>true</enabled>
+                            </metadataRepository>
+                            <requiredVersion>22.3</requiredVersion>
+                            <buildArgs>
+                                <arg>--gc=G1</arg>
+                                <arg>--pgo=zookeeper.iprof</arg>
+                                <arg>-H:+AddAllCharsets</arg>
+                                <arg>--install-exit-handlers</arg>
+                                <arg>-march=compatibility</arg>
+                                <arg>-H:+AddAllCharsets</arg>
                             </buildArgs>
                         </configuration>
                         <executions>
